--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,25 +8,58 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - 
+      -
         uses: actions/checkout@v3
-      - 
+      -
         name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: "3.10.4"
-      - 
+      -
         name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r requirements.txt
-      - 
+      -
         name: Lint with flake8
         run: |
           flake8 helloapp --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 helloapp --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - 
+      -
         name: Test with pytest
         run: |
           pytest -v helloapp/test.py
+      -
+        name: Test with pytest
+        run: |
+          pytest -v helloapp/test.py
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push as dev image
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: abu33/helloapp:dev-${{ github.sha }}
+      -
+        name: Scan image
+        uses: Azure/container-scan@v0
+        with:
+          image-name: abu33/helloapp:dev-${{ github.sha }}
+          run-quality-checks: false
+      -
+        name: Mark image as stable
+        uses: akhilerm/tag-push-action@v2.0.0
+        with:
+          src: abu33/helloapp:dev-${{ github.sha }}
+          dst: |
+            abu33/helloapp:latest
+            abu33/helloapp:stable-1.0-${{ github.sha }}
