--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,10 @@ jobs:
         name: Test with pytest
         run: |
           pytest -v helloapp/test.py
+      - name: Lint Helm
+        uses: WyriHaximus/github-action-helm3@v2
+        with:
+          exec: helm lint ./helloapp-chart/
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
