--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,3 +9,6 @@ jobs:
   build:
     uses: ABu33/devops-task/.github/workflows/build.yaml@master
     secrets: inherit
+  deploy:
+    uses: ABu33/devops-task/.github/workflows/deploy.yaml@master
+    needs: build
