Add missing step id for k8s bake step

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,7 @@ jobs:
       -
         name: Create Kubernetes manifests
         uses: Azure/k8s-bake@v2.2
+        id: bake
         with:
           renderEngine: "helm"
           helmChart: "./helloapp-chart/"
