--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,36 +1,14 @@
 name: build
 on:
-  workflow_call:
+  pull_request:
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
       -
         uses: actions/checkout@v3
-      -
-        name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10.4"
-      -
-        name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          pip install -r requirements.txt
-      -
-        name: Lint with flake8
-        run: |
-          flake8 helloapp --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 helloapp --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      -
-        name: Test with pytest
-        run: |
-          pytest -v helloapp/test.py
-      - name: Lint Helm
-        uses: WyriHaximus/github-action-helm3@v2
-        with:
-          exec: helm lint ./helloapp-chart/
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -52,11 +30,3 @@ jobs:
         with:
           image-name: abu33/helloapp:dev-${{ github.sha }}
           run-quality-checks: false
-      -
-        name: Mark image as stable
-        uses: akhilerm/tag-push-action@v2.0.0
-        with:
-          src: abu33/helloapp:dev-${{ github.sha }}
-          dst: |
-            abu33/helloapp:latest
-            abu33/helloapp:stable-1.0-${{ github.sha }}
